--- a/int.html
+++ b/int.html
@@ -186,3 +186,7 @@ jQuery.fn.extend({
     console.log(arr);
   },
 });
+
+
+
+ valueFormatter: params => (params.value != null ? params.value.toString() : null),
