--- a/int.html
+++ b/int.html
@@ -1,1 +1,14 @@
-const initials = fullName => fullName.split(' ').map(word => word[0].toUpperCase()).join('');
+document.addEventListener('DOMContentLoaded', function () {
+      const gridDiv = document.getElementById('myGrid');
+      new agGrid.Grid(gridDiv, gridOptions);
+
+      // Fetch data from your API
+      fetch('https://jsonplaceholder.typicode.com/users') // Replace with your actual API endpoint
+        .then(response => response.json())
+        .then(data => {
+          gridOptions.api.setRowData(data); // Set the data in the grid
+        })
+        .catch(error => {
+          console.error('Error fetching data:', error);
+        });
+    });
