--- a/test/index.html
+++ b/test/index.html
@@ -1,248 +1,1 @@
-async addNewRow() {
-
-  const addNewIssuerModal = document.getElementById('addIssuerModal');
-  const submitFormButton = document.getElementById('submitFormButton');
-  const closeFormButton = document.getElementById('closeIssuerModalBtn');
-  const historicalGrid = document.querySelector('#historical-grid-container');
-  addNewIssuerModal.style.display = 'flex';
-
-  this.pnl.setDropDownListOptions(
-    document.querySelector('#restrictionCategoryModal'),
-    true
-  );
-
-  const categorySelect = document.getElementById("restrictionCategoryModal");
-  const defaultOption = document.createElement("option");
-  defaultOption.value = "";
-  defaultOption.textContent = "Select Below";
-  defaultOption.selected = true;
-
-  categorySelect.insertBefore(defaultOption, categorySelect.firstChild);
-
-  const newIssueData = {
-    dateRestricted: "",
-    requester: "",
-    notes: "",
-    categoryName: "",
-    transactionTypes: null,
-    issuerName: "",
-    issuerType: "",
-    ticker: "",
-    isin: "",
-    sedol: "",
-    instrumentType: ""
-  };
-
-  document.getElementById('issuerName').value = '';
-  document.getElementById('issuerType').value = 'Public';
-  document.getElementById('cusip').value = '';
-  document.getElementById('ticker').value = '';
-  document.getElementById('isin').value = '';
-  document.getElementById('sedol').value = '';
-  document.getElementById('instrumentType').value = 'Equity';
-  document.getElementById('restrictionCategoryModal').value = '';
-  document.getElementById('startDate').value = '';
-  document.getElementById('requester').value = '';
-  document.getElementById('notes').value = '';
-
-  const dropdownTransactionTypes = document.getElementById('restrictedTransactionTypes');
-  const columnTransactionType = document.querySelectorAll('#columnTransactionType>div.MultiCheckBox');
-
-  let transactionTypes = [];
-  transactionTypes = await this.getTransactionTypes();
-  dropdownTransactionTypes.innerHTML = '';
-
-  transactionTypes.forEach(item => {
-    const optionElement1 = document.createElement("option");
-    optionElement1.value = item;
-    optionElement1.text = item;
-    dropdownTransactionTypes.add(optionElement1);
-  });
-
-  $(document).ready(function () {
-    $("#restrictedTransactionTypes").CreateMultiCheckBox({ width: '', defaultText: 'Select Below', height: '' });
-  });
-
-  if (columnTransactionType.length > 0) {
-    columnTransactionType[0].remove();
-  }
-
-  submitFormButton.addEventListener('click', () => {
-    const input1Value = document.getElementById('issuerName').value;
-    const input10Value = document.getElementById('issuerType').value;
-    const input2Value = document.getElementById('cusip').value;
-    const input3Value = document.getElementById('ticker').value;
-    const input4Value = document.getElementById('isin').value;
-    const input5Value = document.getElementById('sedol').value;
-    const input11Value = document.getElementById('instrumentType').value;
-    const input6Value = document.getElementById('restrictionCategoryModal').value;
-    const input12Value = this.selectedTransactionTypes;
-    const input7Value = document.getElementById('startDate').value;
-    const input8Value = document.getElementById('requester').value;
-    const input9Value = document.getElementById('notes').value;
-
-    console.log(input6Value);
-
-    if (input10Value === 'Public') {
-      if ((input2Value !== '' || input3Value !== '' || input4Value !== '' || input5Value !== '' || input11Value !== '') && (input7Value !== '') && (input6Value !== '')) {
-        const savedTheme = localStorage.getItem('theme');
-
-        if (savedTheme === 'light-mode') {
-          Swal.fire({
-            title: '<span style="font-size:20px; color:"black"; ">Please validate the values before submission</span>',
-            html: `<div style="text-align: left;
-              font-size: 14px;
-              line-height: 10px;
-              theme:'light',
-              border: 1px solid black;
-              padding: 10px;"><p>ISSUER NAME : ${input1Value}</p>` +
-              `<p>ISSUER TYPE : ${input10Value}</p>` +
-              `<p>TICKER : ${input3Value}</p>` +
-              ` <p>ISIN : ${input4Value}</p>` +
-              ` <p>CUSIP : ${input2Value}</p>` +
-              `<p>SEDOL : ${input5Value}</p>` +
-              `<p>INSTRUMENT TYPE : ${input11Value}</p>` +
-              `<p>RESTRICTION CATEGORY : ${input6Value}</p>` +
-              `<p>ALLOWED TRANSACTION TYPE : ${input12Value}</p>` +
-              `<p>START DATE : ${input7Value}</p>` +
-              ` <p>REQUESTER : ${input8Value}</p>` +
-              `<p>NOTES : ${input9Value}</p><div>`,
-            showCancelButton: true,
-            confirmButtonText: 'OK',
-            cancelButtonText: 'Cancel',
-            confirmButtonColor: 'black',
-            cancelButtonColor: 'red',
-          }).then((result) => {
-            if (result.isConfirmed) {
-              newIssueData.dateRestricted = input7Value;
-              newIssueData.requester = input8Value;
-              newIssueData.notes = input9Value;
-              newIssueData.categoryName = input6Value;
-              newIssueData.transactionTypes = input12Value;
-              newIssueData.issuerName = input1Value;
-              newIssueData.issuerType = input10Value;
-              newIssueData.cusip = input2Value;
-              newIssueData.ticker = input3Value;
-              newIssueData.isin = input4Value;
-              newIssueData.sedol = input5Value;
-              newIssueData.instrumentType = input11Value;
-
-              this.gridOptions.api.showLoadingOverlay();
-              this.addNewRestrictedIssuer(this.pnl.dashboard.restrictedIssuer, newIssueData);
-              closeFormButton.click();
-            }
-          });
-        } else {
-          Swal.fire({
-            title: '<span style="font-size:20px; color:"white"; ">Please validate the values before submission</span>',
-            html: `<div style="text-align: left;
-              font-size: 14px;
-              line-height: 10px;
-              theme:'dark',
-              border: 1px solid white;
-              padding: 10px;"><p>ISSUER NAME : ${input1Value}</p>` +
-              `<p>ISSUER TYPE : ${input10Value}</p>` +
-              `<p>TICKER : ${input3Value}</p>` +
-              ` <p>ISIN : ${input4Value}</p>` +
-              ` <p>CUSIP : ${input2Value}</p>` +
-              `<p>SEDOL : ${input5Value}</p>` +
-              `<p>INSTRUMENT TYPE : ${input11Value}</p>` +
-              `<p>RESTRICTION CATEGORY : ${input6Value}</p>` +
-              `<p>ALLOWED TRANSACTION TYPE : ${input12Value}</p>` +
-              `<p>START DATE : ${input7Value}</p>` +
-              ` <p>REQUESTER : ${input8Value}</p>` +
-              `<p>NOTES : ${input9Value}</p><div>`,
-            showCancelButton: true,
-            confirmButtonText: 'OK',
-            cancelButtonText: 'Cancel',
-            confirmButtonColor: 'black',
-            cancelButtonColor: 'red',
-          }).then((result) => {
-            if (result.isConfirmed) {
-              newIssueData.dateRestricted = input7Value;
-              newIssueData.requester = input8Value;
-              newIssueData.notes = input9Value;
-              newIssueData.categoryName = input6Value;
-              newIssueData.transactionTypes = input12Value;
-              newIssueData.issuerName = input1Value;
-              newIssueData.issuerType = input10Value;
-              newIssueData.cusip = input2Value;
-              newIssueData.ticker = input3Value;
-              newIssueData.isin = input4Value;
-              newIssueData.sedol = input5Value;
-              newIssueData.instrumentType = input11Value;
-
-              this.gridOptions.api.showLoadingOverlay();
-              this.addNewRestrictedIssuer(this.pnl.dashboard.restrictedIssuer, newIssueData);
-              closeFormButton.click();
-            }
-          });
-        }
-      } else {
-        Swal.fire({
-          icon: 'error',
-          title: '<span style="font-size:20px; color:"black"; ">Oops...Something went wrong!</span>',
-          text: 'At least one of the four out of TICKER, ISIN, CUSIP, SEDOL and Restriction Category Name, Instrument Type and Start Date are mandatory for Public Entries.',
-          confirmButtonColor: 'black',
-        });
-
-        return;
-      }
-    } else {
-      if (input1Value !== '' && input7Value !== '' && input6Value !== '') {
-        Swal.fire({
-          title: '<span style="font-size:20px; color:"black"; ">Please validate the values before submission </span>',
-          html: `<div style="text-align: left;
-            font-size: 14px;
-            line-height: 10px;
-            border: 1px solid black;
-            padding: 10px;"><p>ISSUER NAME : ${input1Value}</p>` +
-            `<p>ISSUER TYPE : ${input10Value}</p>` +
-            `<p>TICKER : ${input3Value}</p>` +
-            ` <p>ISIN : ${input4Value}</p>` +
-            ` <p>CUSIP : ${input2Value}</p>` +
-            `<p>SEDOL : ${input5Value}</p>` +
-            `<p>INSTRUMENT TYPE : ${input11Value}</p>` +
-            `<p>RESTRICTION CATEGORY : ${input6Value}</p>` +
-            `<p>ALLOWED TRANSACTION TYPE : ${input12Value}</p>` +
-            `<p>START DATE : ${input7Value}</p>` +
-            ` <p>REQUESTER : ${input8Value}</p>` +
-            `<p>NOTES : ${input9Value}</p><div>`,
-          showCancelButton: true,
-          confirmButtonText: 'OK',
-          cancelButtonText: 'Cancel',
-          confirmButtonColor: 'black',
-          cancelButtonColor: 'red',
-        }).then((result) => {
-          if (result.isConfirmed) {
-            newIssueData.dateRestricted = input7Value;
-            newIssueData.requester = input8Value;
-            newIssueData.notes = input9Value;
-            newIssueData.categoryName = input6Value;
-            newIssueData.transactionTypes = input12Value;
-            newIssueData.issuerName = input1Value;
-            newIssueData.issuerType = input10Value;
-            newIssueData.cusip = input2Value;
-            newIssueData.ticker = input3Value;
-            newIssueData.isin = input4Value;
-            newIssueData.sedol = input5Value;
-            newIssueData.instrumentType = input11Value;
-
-            this.gridOptions.api.showLoadingOverlay();
-            this.addNewRestrictedIssuer(this.pnl.dashboard.restrictedIssuer, newIssueData);
-            closeFormButton.click();
-          }
-        });
-      } else {
-        Swal.fire({
-          icon: 'error',
-          title: '<span style="font-size:20px; color:"black"; ">Oops...Something went wrong!</span>',
-          text: 'At least Issuer Name, Restriction Category and Start Date are mandatory for Private Entries.',
-          confirmButtonColor: 'black',
-        });
-
-        return;
-      }
-    }
-  });
-}
+return params.value.split(',').map(s => s.trim()).join('<br>');
