--- a/test/my-view1.html
+++ b/test/my-view1.html
@@ -1,43 +1,8 @@
-<!--
-@license
-Copyright (c) 2016 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
-
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
-
-    <title>my-view1</title>
-
-    <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
-    <script src="../node_modules/wct-browser-legacy/browser.js"></script>
-
-    <!-- Import the element to test -->
-    <script type="module" src="../src/my-view1.js"></script>
-  </head>
-  <body>
-    <test-fixture id="BasicView">
-      <template>
-        <my-view1></my-view1>
-      </template>
-    </test-fixture>
-
-    <script type="module">
-      suite('my-view1 tests', function() {
-        test('Number in circle should be 1', function() {
-          var myView = fixture('BasicView');
-          var circle = myView.shadowRoot.querySelector('.circle');
-
-          assert.equal(circle.textContent, '1');
-        });
-      });
-    </script>
-  </body>
-</html>
+npm error code E404
+npm error 404 Not Found - GET https://gitlab.loimkube.biz.lodh.com/api/v4/projects/329/packages/npm/@loim/loim-ui/-/@loim/loim-ui-1.0.7.tgz - Project not found
+npm error 404
+npm error 404  '@loim/loim-ui@https://gitlab.loimkube.biz.lodh.com/api/v4/projects/329/packages/npm/@loim/loim-ui/-/@loim/loim-ui-1.0.7.tgz' is not in this registry.
+npm error 404
+npm error 404 Note that you can also install from a
+npm error 404 tarball, folder, http url, or git url.
+npm error A complete log of this run can be found in: /home/coder/.npm/_logs/2025-07-17T16_43_11_855Z-debug-0.log
