--- a/test/index.html
+++ b/test/index.html
@@ -1,21 +1,8 @@
-GET /api/options-futures-eod?date=2025-07-01&fundType=Volantis
-
-[
-  {
-    "TradeId": "12345",
-    "Description": "Sample Option",
-    "Ticker": "ABC",
-    "ISIN": "US1234567890",
-    "SEDOL": "B1XYZ23",
-    "TradeDate": "2025-07-01",
-    "SettleDate": "2025-07-03",
-    "NotionalQuantity": 1000,
-    "TradePrice": 50.25,
-    "GrossCommissions": 125.50,
-    "Counterparty": "XYZ Bank",
-    "LEName": "LE Example",
-    "Notes": "Urgent",
-    "Custodian": "Custodian Name",
-    "CustodianAccountDisplayName": "Account Display Name"
-  }
-]
+"https://bidstats.uk/tenders/?ntype=award"
+ 
+https://bidstats.uk/data/more-notices?ntype=award&maxId={max_id}
+ 
+START_URL = "https://bidstats.uk/tenders/?ntype=award"
+KEYWORDS =  ["Kier", "TPXimpact", "capita", "Mitie","TPXimpact","Made Tech","Hippo Digital","Olive Jar Digital","1Spatial"]
+MAX_PAGES = 2
+ 
