--- a/test/index.html
+++ b/test/index.html
@@ -6,3 +6,9 @@ START_URL = "https://bidstats.uk/tenders/?ntype=award"
 KEYWORDS =  ["Kier", "TPXimpact", "capita", "Mitie","TPXimpact","Made Tech","Hippo Digital","Olive Jar Digital","1Spatial"]
 MAX_PAGES = 2
  
+curl -X POST "https://78b43de0-b3cc-49f2-8f4c-a8e9a10537f1-00-3mb7mu3cmxej1.janeway.replit.dev/scrape" \
+     -H "Content-Type: application/json" \
+     -d '{
+  "url": "https://www.parsehub.com/",
+  "keywords": ["scraping"]
+        }'
