--- a/test/my-view1.html
+++ b/test/my-view1.html
@@ -1,8 +1,1 @@
-npm error code E404
-npm error 404 Not Found - GET https://gitlab.loimkube.biz.lodh.com/api/v4/projects/329/packages/npm/@loim/loim-ui/-/@loim/loim-ui-1.0.7.tgz - Project not found
-npm error 404
-npm error 404  '@loim/loim-ui@https://gitlab.loimkube.biz.lodh.com/api/v4/projects/329/packages/npm/@loim/loim-ui/-/@loim/loim-ui-1.0.7.tgz' is not in this registry.
-npm error 404
-npm error 404 Note that you can also install from a
-npm error 404 tarball, folder, http url, or git url.
-npm error A complete log of this run can be found in: /home/coder/.npm/_logs/2025-07-17T16_43_11_855Z-debug-0.log
+Validated Issuer Name	User Entered Issuer Name	Issuer Type	Ticker	ISIN	CUSIP	SEDOL	Ultimate Parent Name	Restriction Category	Allowed Transaction Type	Start Date	Restriction Requestor	Restriction Notes	Restricted By	Restricted On
