--- a/test/my-view1.html
+++ b/test/my-view1.html
@@ -1,1 +1,22 @@
-Validated Issuer Name	User Entered Issuer Name	Issuer Type	Ticker	ISIN	CUSIP	SEDOL	Ultimate Parent Name	Restriction Category	Allowed Transaction Type	Start Date	Restriction Requestor	Restriction Notes	Restricted By	Restricted On
+ag-grid-community/theming": "^32.3.5",
+    "@chakra-ui/react": "^3.19.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@loim/loim-ui": "1.0.8",
+    "@loim/loim-auth": "1.1.3",
+    "@tanstack/react-query": "^5.80.3",
+    "ag-grid-community": "^32.3.7",
+    "ag-grid-enterprise": "^32.3.7",
+    "ag-grid-react": "^32.3.7",
+    "date-fns": "^3.6.0",
+    "highcharts": "^11.4.8",
+    "highcharts-react-official": "^3.2.2",
+    "ky": "^1.8.1",
+    "next-themes": "^0.4.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.57.0",
+    "react-icons": "^5.5.0",
+    "react-select": "^5.10.1",
+    "usehooks-ts": "^3.1.1",
+    "wouter": "^3.7.1"
