--- a/test/index.html
+++ b/test/index.html
@@ -1,6 +1,21 @@
+import { Box, Tabs, TabList, Tab, TabPanels, TabPanel } from '@chakra-ui/react'
+import { useLocation } from 'wouter'
 
+const tabs = [
+  { path: '/', label: 'Restricted Issuers' },
+  { path: '/history', label: 'Restricted Issues History' },
+  { path: '/instruments', label: 'Restricted Instruments' },
+  { path: '/categories', label: 'Restriction Category' },
+]
 
-<Tabs index={activeIndex} onChange={(index) => setLocation(tabs[index].path)} variant="line">
+export function Navigation() {
+  const [location, setLocation] = useLocation()
+  
+  const activeIndex = tabs.findIndex(tab => tab.path === location) || 0
+
+  return (
+    <Box bg="gray.900" borderBottom="1px" borderColor="gray.700">
+      <Tabs index={activeIndex} onChange={(index) => setLocation(tabs[index].path)} variant="line">
         <TabList px={6} border="none">
           {tabs.map((tab) => (
             <Tab
@@ -16,3 +31,6 @@
           ))}
         </TabList>
       </Tabs>
+    </Box>
+  )
+}
