--- a/test/index.html
+++ b/test/index.html
@@ -1,36 +1,28 @@
-import { Box, Tabs, TabList, Tab, TabPanels, TabPanel } from '@chakra-ui/react'
-import { useLocation } from 'wouter'
+const [location, setLocation] = useLocation()
 
-const tabs = [
-  { path: '/', label: 'Restricted Issuers' },
-  { path: '/history', label: 'Restricted Issues History' },
-  { path: '/instruments', label: 'Restricted Instruments' },
-  { path: '/categories', label: 'Restriction Category' },
-]
-
-export function Navigation() {
-  const [location, setLocation] = useLocation()
-  
-  const activeIndex = tabs.findIndex(tab => tab.path === location) || 0
+  // Find active tab
+  const activeValue = tabs.find((tab) => tab.path === location)?.path || "/"
 
   return (
     <Box bg="gray.900" borderBottom="1px" borderColor="gray.700">
-      <Tabs index={activeIndex} onChange={(index) => setLocation(tabs[index].path)} variant="line">
-        <TabList px={6} border="none">
+      <Tabs.Root
+        value={activeValue}
+        onValueChange={(val) => setLocation(val)}
+        variant="line"
+      >
+        <Tabs.List px={6} border="none">
           {tabs.map((tab) => (
-            <Tab
+            <Tabs.Trigger
               key={tab.path}
+              value={tab.path}
               color="gray.400"
-              _selected={{ color: 'blue.400', borderColor: 'blue.400' }}
-              _hover={{ color: 'gray.200' }}
+              _selected={{ color: "blue.400", borderColor: "blue.400" }}
+              _hover={{ color: "gray.200" }}
               fontSize="sm"
               py={4}
             >
               {tab.label}
-            </Tab>
+            </Tabs.Trigger>
           ))}
-        </TabList>
-      </Tabs>
-    </Box>
-  )
-}
+        </Tabs.List>
+      </Tabs.Root>
